<resources>
    <string name="app_name">SahandGasht</string>
    <string name="one_day_tour">تورهای یک روزه</string>
    <string name="offered_tour">تورهای پیشنهادی</string>
    <string name="special_tour">تورهای ویژه</string>
    <string name="list_more">مشاهده همه</string>
    <string name="open">Tour</string>
    <string name="Close">Tour</string>
    <string name="sign_up">عضویت</string>
    <string name="login">ورود</string>
    <string name="first_page">Sahand Gasht v 1.0</string>
    <string name="recycler_button">مشاهده جزئیات</string>
    <string name="tour_details">جزئیات تور</string>
    <string name="reserve_button">رزرو کنید</string>
    <string name="same_tour">تورهای مشابه</string>
    <string name="making_tour">ثبت</string>


</resources>
