<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_welcome_page">

    <ImageView
        android:id="@+id/first_page_logo"
        android:layout_width="200dp"
        android:layout_height="175dp"
        android:src="@drawable/logo"
        android:layout_centerInParent="true"
        android:layout_above="@id/first_page_image_title" />

    <ImageView
        android:id="@+id/first_page_image_title"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_margin="5dp"
        android:src="@drawable/sahandgasht_white"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/sign_up_button"
        android:stateListAnimator="@null"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/first_page_image_title"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textColor="@color/darkGreen"
        android:gravity="center"
        android:fontFamily="@font/iransans_fanum_bold"
        android:background="@drawable/login_button_style" />

    <Button
        android:id="@+id/login_button"
        android:stateListAnimator="@null"
        android:layout_width="150dp"
        android:layout_height="32dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sign_up_button"
        android:text="@string/login"
        android:textSize="17sp"
        android:textColor="@color/darkGreen"
        android:gravity="center"
        android:fontFamily="@font/iransans_fanum_bold"
        android:background="@drawable/button_white"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_page"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp" />

    <FrameLayout
        android:id="@+id/fragment_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>