<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_home_page">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="268dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:scaleType="fitXY"
            android:src="@drawable/background_home_page_edit" />

        <ImageView
            android:id="@+id/homepage_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:src="@drawable/sahandgasht" />

        <TextView
            android:id="@+id/mainpage_username"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:fontFamily="@font/iransans_fanum_bold"
            android:gravity="center"
            android:text="کاربر"
            android:textColor="@color/purple" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/homepage_image"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/iransansweb_fanum_medium"
            android:text="تور گردشگریت رو انتخاب کن"
            android:textColor="@color/purple"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/iransansweb_fanum_medium"
            android:text="بعدش رو بسپار به ما"
            android:textColor="@color/purple"
            android:textSize="15sp" />

        <android.support.v7.widget.SearchView
            android:id="@+id/searchview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="260dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/search_style"
            app:iconifiedByDefault="false"
            app:queryHint="جست و جو میان تورها ..." />

        <LinearLayout
            android:id="@+id/offered_tour"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_marginTop="300dp"
            android:background="@drawable/layout_style"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/offered_tour_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="24dp"
                    android:fontFamily="@font/iransans_fanum_bold"
                    android:gravity="center_vertical"
                    android:text="@string/offered_tour"
                    android:textColor="@color/darkGreen"
                    android:textSize="20sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/offered_tour_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="64dp"
                    android:layoutDirection="rtl">

                </android.support.v7.widget.RecyclerView>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/special_tour"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_below="@id/offered_tour"
            android:background="@color/darkGreen"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/special_tour_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/special_tours" />

                <TextView
                    android:id="@+id/special_tour_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="24dp"
                    android:fontFamily="@font/iransans_fanum_bold"
                    android:gravity="center_vertical"
                    android:text="@string/special_tour"
                    android:textColor="@color/darkGreen"
                    android:textSize="20sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/special_tour_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="64dp"
                    android:layoutDirection="rtl">

                </android.support.v7.widget.RecyclerView>


            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_below="@id/special_tour"
            android:background="@color/white"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/one_day_tour_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="24dp"
                    android:fontFamily="@font/iransans_fanum_bold"
                    android:gravity="center_vertical"
                    android:text="@string/one_day_tour"
                    android:textColor="@color/darkGreen"
                    android:textSize="20sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/oneday_tour_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="64dp"
                    android:layoutDirection="rtl"></android.support.v7.widget.RecyclerView>

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>